--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'RC'
 - !lcsh 'Insect pests'
 - !lcsh 'Insects as carriers of disease'
+- GITenberg
 title: "Insects and Diseases\r\nA Popular Account of the Way in Which Insects may\
   \ Spread or Cause some of our Common Diseases"
 url: http://www.gutenberg.org/ebooks/28177
